# mortal-engine

./: .gitignore  CMakeLists.txt  README.md  mortal-engine.cppcheck  mortal-engine.pro
diagrams/: README.md  diagram-all.bat  diagram.bat  dotml-license.txt  dotml2dot.xsl  model2diagram.edges.xsl  model2diagram.nodes.xsl  model2diagram.shared.xsl  model2diagram.xsl
examples/: 00-Minimal.tests.xml  00-Minimal.xml  01-Filtered.tests.xml  01-Filtered.xml  01-stems.xml  02-Affixes.tests.xml  02-Affixes.xml  02a-Missing-Form.tests.xml  02a-Missing-Form.xml  02b-Missing-Form-2.tests.xml  02b-Missing-Form-2.xml  03-Optional-Affixes.tests.xml  03-Optional-Affixes.xml  04-Tag-Allomorphy.tests.xml  04-Tag-Allomorphy.xml  05-Mutually-Exclusive.tests.xml  05-Mutually-Exclusive.xml  06-Mutually-Exclusive-2.tests.xml  06-Mutually-Exclusive-2.xml  07-Forks.tests.xml  07-Forks.xml  08-Sequences.tests.xml  08-Sequences.xml  09-Multiple-Models.tests.xml  09-Multiple-Models.xml  10-Jumps.tests.xml  10-Jumps.xml  11-Jumps-2.tests.xml  11-Jumps-2.xml  12-Phonological-Allomorphy.tests.xml  12-Phonological-Allomorphy.xml  12-stems.xml  13-Shared-Conditions.tests.xml  13-Shared-Conditions.xml  14-Create-Allomorphs.tests.xml  14-Create-Allomorphs.xml  15-Create-Allomorphs-2.tests.xml  15-Create-Allomorphs-2.xml  16-Create-Allomorphs-3.tests.xml  16-Create-Allomorphs-3.xml  (+26 more)
mortal-engine/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  debug.cpp  debug.h  messages.cpp  messages.h  morphology.cpp  morphology.h  morphologychecker.cpp  morphologychecker.h  morphologyxmlreader.cpp  morphologyxmlreader.h  mortal-engine.pro  mortal-engine_global.cpp  mortal-engine_global.h
mortal-engine-test/: CMakeLists.txt  abstractinputoutputtest.cpp  abstractinputoutputtest.h  abstracttest.cpp  abstracttest.h  generationtest.cpp  generationtest.h  harnessxmlreader.cpp  harnessxmlreader.h  interlinearglosstest.cpp  interlinearglosstest.h  main.cpp  message.cpp  message.h  mortal-engine-test.pro  parsingtest.cpp  parsingtest.h  recognitiontest.cpp  recognitiontest.h  stemreplacementtest.cpp  stemreplacementtest.h  suggestiontest.cpp  suggestiontest.h  testharness.cpp  testharness.h  testschema.cpp  testschema.h  transductiontest.cpp  transductiontest.h
mortal-engine/constraints/: abstractconstraint.cpp  abstractconstraint.h  abstractlongdistanceconstraint.cpp  abstractlongdistanceconstraint.h  abstractmatchcondition.cpp  abstractmatchcondition.h  abstractnestedconstraint.cpp  abstractnestedconstraint.h  andcondition.cpp  andcondition.h  boundcondition.cpp  boundcondition.h  constraintmatcher.h  followingnodeconstraint.cpp  followingnodeconstraint.h  followingphonologicalcondition.cpp  followingphonologicalcondition.h  ignoreflag.cpp  ignoreflag.h  notcondition.cpp  notcondition.h  orcondition.cpp  orcondition.h  phonologicalcondition.cpp  phonologicalcondition.h  pointertoconstraint.cpp  pointertoconstraint.h  precedingnodeconstraint.cpp  precedingnodeconstraint.h  satisfiedcondition.cpp  satisfiedcondition.h  tagmatchcondition.cpp  tagmatchcondition.h  wordfinalcondition.cpp  wordfinalcondition.h
mortal-engine/create-allomorphs/: createallomorphs.cpp  createallomorphs.h  createallomorphscase.cpp  createallomorphscase.h  createallomorphsreplacement.cpp  createallomorphsreplacement.h
mortal-engine/datatypes/: allomorph.cpp  allomorph.h  form.cpp  form.h  generation.cpp  generation.h  hashseed.cpp  hashseed.h  lexicalstem.cpp  lexicalstem.h  morphemelabel.cpp  morphemelabel.h  morphemesequence.cpp  morphemesequence.h  nodeid.cpp  nodeid.h  parsing.cpp  parsing.h  parsingstep.cpp  parsingstep.h  parsingsummary.cpp  parsingsummary.h  portmanteau.cpp  portmanteau.h  tag.cpp  tag.h  writingsystem.cpp  writingsystem.h
mortal-engine/generation-constraints/: abstractgenerationconstraint.cpp  abstractgenerationconstraint.h  morphemesequenceconstraint.cpp  morphemesequenceconstraint.h  stemidentityconstraint.cpp  stemidentityconstraint.h
mortal-engine/logging/: parsinglog.cpp  parsinglog.h  xmlparsinglog.cpp  xmlparsinglog.h
mortal-engine/nodes/: abstractnode.cpp  abstractnode.h  abstractpath.cpp  abstractpath.h  abstractsqlstemlist.cpp  abstractsqlstemlist.h  abstractstemlist.cpp  abstractstemlist.h  copynode.cpp  copynode.h  fork.cpp  fork.h  jump.cpp  jump.h  morphemenode.cpp  morphemenode.h  morphologicalmodel.cpp  morphologicalmodel.h  mutuallyexclusivemorphemes.cpp  mutuallyexclusivemorphemes.h  nodematcher.h  path.cpp  path.h  sequence.cpp  sequence.h  sqlitestemlist.cpp  sqlitestemlist.h  sqlserverstemlist.cpp  sqlserverstemlist.h  xmlstemlist.cpp  xmlstemlist.h
mortal-engine/returns/: lexicalsteminsertresult.cpp  lexicalsteminsertresult.h
schemata/: catalog.xml  me-tests.xsd  morphology.xsd  stems.xsd  tests.xsd  writing-systems.xsd
